2020-07-02         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.1, gawktexi.in: Document -I/--trace option.

2020-06-25         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.1: Applied some more troff "lint" fixes.
	Thanks to Bjarni Ingi Gislason <bjarniig@rhi.hi.is>.

2020-06-15         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkinet.texi: Small fixes, and revise the indexing to use
	new Texinfo features.

2020-06-14         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkworkflow.texi: Revise indexing to use new Texinfo features.

2020-06-12         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (String Functions): Update doc on asort and asorti
	w.r.t. SYMTAB and FUNCTAB.

2020-06-10         Andrew J. Schorr      <aschorr@telemetry-investments.com>

	* bc_notes: Add new field `unsigned long long ldl' to INSTRUCTION,
	and update the definition of exec_count.

2020-06-09         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Implementation Limits): Update the table to be more
	accurate and up to date. Note units of limits, per request from
	Ed Morton <mortoneccc@comcast.net>.

2020-06-07         Arnold D. Robbins     <arnold@skeeve.com>

	* texinfo.tex: Updated from GNULIB.

2020-06-05         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Improvements in switch statement and typed
	regex sections.

2020-05-24         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.1: Applied a number of troff "lint" fixes.
	Thanks to Bjarni Ingi Gislason <bjarniig@rhi.hi.is>.

2020-05-15         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkworkflow.texi: Minor updates.
	* texinfo.tex: Updated from GNULIB.

2020-05-08         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkinet.texi: Remove special casing for statist image for
	Info. Makeinfo handles it just fine.

2020-04-26         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkinet.texi: Include ASCII Art version of the statist