@@ -273,6 +273,8 @@ options on \*(FCstdout\*(FR, then exit zero.
 .TI "\*(FC\-i \*(FIfile\*(FR, \*(FC\-\^\-include \*(FIfile\*(FR
 Include library AWK code in \*(FIfile\*(FR.
 See \fHAwk Program Execution\*(FR.
+.TI "\*(FC\-I\*(FR, \*(FC\-\^\-trace\*(FR
+Print the internal byte code names as they are executed.
 .TI "\*(FC\-l \*(FIlib\*(FR, \*(FC\-\^\-load \*(FIlib\*(FR
 Load dynamic extension \*(FIlib\fP.
 See \fHDynamic Extensions\*(FR.
@@ -298,8 +300,7 @@ Enable internal optimizations (default is on).
 .TI "\*(FC\-p\*(FR[\*(FC\*(FIfile\*(FR], \*(FC\-\^\-profile\*(FR[\*(FC=\*(FIfile\*(FR]
 Send profiling data to \*(FIfile\*(FR
 (default: \*(FCawkprof.out\*(FR).
-The profile contains execution counts in the left margin
-of each statement in the program.
+The profile contains execution counts in the left margin.
 .TI "\*(FC\-P\*(FR, \*(FC\-\^\-posix\*(FR
 Disable common and GNU extensions.
 .TI "\*(FC\-r\*(FR, \*(FC\-\^\-re\-interval\*(FR
