@@ -1,6 +1,7 @@
 2020-07-02         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawk.1, gawktexi.in: Document -I/--trace option.
+	* awkcard.in: Document -I/--trace option.
 
 2020-06-25         Arnold D. Robbins     <arnold@skeeve.com>
 
